# jira-assistant-skills

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGILE_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CLAUDE.md  COLLABORATION_VERSIONING_IMPLEMENTATION_PLAN.md  Dockerfile  GAP_ANALYSIS.md  ISSUE_RELATIONSHIPS_IMPLEMENTATION_PLAN.md  LIVE_INTEGRATION_TEST_GAP_ANALYSIS.md  LIVE_TEST_SCRIPT_COVERAGE_ANALYSIS.md  README.md  SEARCH_REPORTING_IMPLEMENTATION_PLAN.md  SKILL_DOCUMENTATION_GAP_ANALYSIS.md  TIME_TRACKING_IMPLEMENTATION_PLAN.md  conftest.py  docker-compose.yml  marketplace.json  pyproject.toml  pytest.ini  release-please-config.json  requirements-e2e.txt  run_live_tests.sh
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  post-create.sh
.github/workflows/: ci.yml  release.yml
agents/: skill-doc-coordinator.md
agents/reviewers/: jira-admin-reviewer.md  jira-agile-reviewer.md  jira-assistant-reviewer.md  jira-bulk-reviewer.md  jira-collaborate-reviewer.md  jira-dev-reviewer.md  jira-fields-reviewer.md  jira-issue-reviewer.md  jira-jsm-reviewer.md  jira-lifecycle-reviewer.md  jira-ops-reviewer.md  jira-relationships-reviewer.md  jira-search-reviewer.md  jira-time-reviewer.md
docker/e2e/: Dockerfile
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CONTAINER_TESTING.md  GIT_WORKFLOW.md  IMPROVEMENT_PLAN.md  PARALLEL_SUBAGENTS.md  TESTING.md  configuration.md  quick-start.md  scripts-reference.md  troubleshooting.md
docs/analysis/: GAP_ANALYSIS.md  jira-agile-review.md  jira-bulk-review.md  jira-collaborate-review.md  jira-dev-review.md  jira-fields-review.md  jira-issue-review.md  jira-jsm-review.md  jira-lifecycle-review.md  jira-ops-review.md  jira-relationships-review.md  jira-search-review.md  jira-time-review.md
docs/implementation-logs/: fix-jira-agile-live-integration.md  fix-jira-bulk-live-integration.md  fix-jira-collaborate-live-integration.md  fix-jira-dev-live-integration.md  fix-jira-fields-live-integration.md  fix-jira-issue-live-integration.md  fix-jira-jsm-live-integration.md  fix-jira-lifecycle-live-integration.md  fix-jira-ops-live-integration.md  fix-jira-relationships-live-integration.md  fix-jira-search-live-integration.md  fix-jira-time-live-integration.md  fix-shared-live-integration.md
docs/implementation-plans/: ADMINISTRATION_IMPLEMENTATION_PLAN.md  BULK_OPERATIONS_IMPLEMENTATION_PLAN.md  DEVELOPER_EXPERIENCE_IMPLEMENTATION_PLAN.md  (+3 more)
proposals/: 01-hero-section-options.md  02-visual-assets-options.md  03-architecture-diagrams.md  04-use-case-visualizations.md  05-comparison-content.md  06-trust-signals.md  07-video-content-strategy.md  08-interactive-demos.md  09-audience-specific-content.md  10-implementation-tasks.md
scripts/: install.sh  run_live_tests.sh  setup-env.sh  sync-version.sh
tests/: test_cli.py
(+1075 files in other folders)
