[project]
name = "jira-assistant-skills"
version = "1.0.0"
description = "A collection of CLI-based assistant skills for interacting with Jira."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0"
]

[project.scripts]
jira = "jira_assistant_skills.cli.main:cli"

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["."]
testpaths = ["plugins/jira-assistant-skills/skills"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
import_mode = "importlib"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may hit external services)",
    "slow: Slow-running tests",
    "admin: Tests for jira-admin skill",
    "agile: Tests for jira-agile skill",
    "bulk: Tests for jira-bulk skill",
    "collaborate: Tests for jira-collaborate skill",
    "dev: Tests for jira-dev skill",
    "fields: Tests for jira-fields skill",
    "issue: Tests for jira-issue skill",
    "jsm: Tests for jira-jsm skill",
    "lifecycle: Tests for jira-lifecycle skill",
    "ops: Tests for jira-ops skill",
    "relationships: Tests for jira-relationships skill",
    "search: Tests for jira-search skill",
    "shared: Tests for shared library",
    "time: Tests for jira-time skill",
]

[tool.coverage.run]
source = ["plugins/jira-assistant-skills/skills"]
omit = ["*/tests/*", "*/conftest.py", "*/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
