# This project is a Claude Code plugin (documentation only)
# The CLI is now distributed via jira-as
# This file provides development tooling configuration

[project]
name = "jira-assistant-skills-plugin"
version = "4.1.0"
description = "Claude Code plugin for JIRA automation - provides skill documentation for the jira-as CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

# CLI is installed via the library
dependencies = [
    "jira-as>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.8.0",
]

# Tell setuptools this is a documentation-only project with no packages
[tool.setuptools]
packages = []

# =============================================================================
# Ruff - Fast Python linter and formatter
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
